Fix wrap for quick replies

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -144,6 +144,7 @@ $roboto: 'Roboto', serif;
 @mixin replies {
   margin: 10px;
   display: flex;
+  flex-wrap: wrap;
   overflow: auto;
   font-size: 14px;
   font-family: $roboto;
